--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <div class="head">
 		<div class="video">
 			<video autoplay muted loop>
-				<source src="img/启动1.mp4" type="video/mp4">
+				<source src="hfjdh.github.io/启动.mp4" type="video/mp4">
 				Your browser does not support the video tag.
 			</video>
 		</div>
@@ -50,14 +50,14 @@
 				<td>雪峰耸立，碧水潺潺，四姑娘山的美让人心醉。在这片净土中，找寻<br />心灵的归宿。</td>
 			</tr>
 			<tr>
-				<td><img src="img/wugongshan.jpg"/></td>
-				<td><img src="img/dunhuang.jpg"/></td>
-				<td><img src="img/siguniang.jpg"/></td>
+				<td><img src="hfjdh.github.io/m1.jpg"/></td>
+				<td><img src="hfjdh.github.io/m2.jpg"/></td>
+				<td><img src="hfjdh.github.io/m3.jpg"/></td>
 			</tr>
 		</table>
 	</div>
 	<div class="content2">
-			<img src="img/enshi.jpg" />
+			<img src="hfjdh.github.io/m4.jpg" />
 			<div class="fengmiangushi">
 			<p class="fengmian"><h2>封面故事</h2></p>
 			<p class="jianjie">恩施大峡谷，位于湖北省恩施土家族苗族自治州恩施市屯堡乡，地处湘、渝、鄂三省交界处，距恩施市区49千米，距利川市区39千米，峡谷全长108千米，面积达300平方千米。恩施大峡谷，位于湖北省恩施土家族苗族自治州恩施市屯堡乡，地处湘、渝、鄂三省交界处，距恩施市区49千米，距利川市区39千米，峡谷全长108千米，面积达300平方千米。恩施大峡谷已开放七星寨景区全线及云龙地缝部分景区。七星寨开放面积7.2千米，天坑、地缝、绝壁、峰丛、岩柱群、溶洞、暗河等地质景观一应俱全，被称为“喀斯特地形地貌天然博物馆”。</p>
