--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title>WORLD VIEW-START</title>
-	<link rel="stylesheet" href="hfjdh.github.io/1.css">
+	<link rel="stylesheet" href="zero.github.io/1.css">
 </head>
 <body>
     <div class="head">
